# AIlearaning

FirstOpenAI/: task_1_import_setup.py  task_2_client_initialization.py  task_3_api_call_explained.py  task_4_extract_response.py
Lang-chain-udemy/: main.py  pyproject.toml  react.py
Lang-chain-udemy/lang-graph/: SimpleLangGraph.py  graph.mmd  main.py  nodes.py  react_langraph.py
LangChain/: README.md  task_2_multi_model.py  task_3_ollama_chat.py  task_3_prompt_templates.py  task_4_output_parsers.py  task_5_complete_chain.py
LangChain/langchain-course/: .gitignore  main.py
vectorDB/: task_1_understanding_embeddings.py  task_2_document_processing.py  task_3_vector_store.py  task_4_semantic_search.py
