[project]
name = "lang-chain-udemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
      "black>=25.9.0",
      "isort>=7.0.0",
      "langchain>=1.0.4",
      "langchain-openai>=1.0.2",
      "langchain-tavily>=0.2.13",
      "langchain-ollama>=0.2.0",
      "langchain-google-genai>=2.0.0",
      "python-dotenv>=1.2.1",
      "tavily-python>=0.7.12",
]
